@@ -2,6 +2,7 @@
 	- pentium3/pentium4 arch support (pluto@PLD).
 	- cpuid() cleanups for PIC/non-PIC and gcc 3.4 (pluto@PLD).
 	- rpmGlob() is now locale independent (wiget@PLD).
+	- conditional build support/unification (jajcus,malekith,qboosh,wiget@PLD).
 	= add type to tag array.
 
 4.3.1 -> 4.3.2:
